# adventofcode2022

./: .gitignore  MANIFEST.in  setup.cfg
adventofcode2022/: __main__.py  main.py
adventofcode2022/days/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  template.py
adventofcode2022/lib/: aoc.py  exceptions.py  utils.py
tests/: adventofcode2022_test.py
