[metadata]
name = adventofcode2022
version = attr: adventofcode2022.__version__
description = adventofcode2022
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = 
project_urls =
    Source=https://github.com/DigiDuncan/adventofcode2022
    Tracker=https://github.com/DigiDuncan/adventofcode2022/issues

[options]
packages = find:
python_requires = >=3.10
zip_safe = yes
include_package_data = True
install_requires =
    requests==2.28.1
    digiformatter==0.5.7.2

[options.extras_require]
dev =
    pytest==7.2.0
    flake8==6.0.0
    autopep8==2.0.0

[options.entry_points]
console_scripts =
    adventofcode2022 = adventofcode2022.main:main

[flake8]
ignore = E501,W503
per-file-ignores =
    */__init__.py:F401,F403
